# high-load-example

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_positions.py
grafana/provisioning/dashboards/json/: positions-overview.json
kibana/config/: kibana.yml
kibana/import/: setup.sh
kibana/import/saved_objects/: 01-index-pattern.json  02-visualization-histogram.json  03-saved-search.json  04-dashboard.json
logstash/pipeline/: positions.conf
prometheus/: prometheus.yml
src/positions_service/: main.py
src/positions_service/application/: commands.py  handlers.py  ports.py
src/positions_service/domain/: entities.py  events.py  exceptions.py  value_objects.py
src/positions_service/infrastructure/: config.py
src/positions_service/infrastructure/load_generation/: schemas.py  wave_runner.py
src/positions_service/infrastructure/messaging/: kafka_publisher.py
src/positions_service/infrastructure/persistence/: mappers.py  models.py  repository.py  uow.py
src/positions_service/interfaces/http/: errors.py  load_router.py  router.py  schemas.py
tests/unit/: test_domain.py  test_handlers.py
